WP-2951: change implementation to fix wrap, float, change classes used.

--- a/sass/revamp-design/_search-filters.sass
+++ b/sass/revamp-design/_search-filters.sass
@@ -67,7 +67,7 @@
       cursor: default
 
 // Main search
-.grey-search-box
+#google-appliance-block-form
   +breakpoint($bp-tablet-port)
     float: right
     margin-top: 30px
@@ -130,45 +130,43 @@
       &:hover
         background-position: center -27px
 
+// General search results page search input
+#google-appliance-search-form,
+#google-appliance-search-form--2
+  +clearfix
+  max-width: 468px
+  .form-item-search-keys
+    float: left
+    margin: 0 -36px 12px 0
+    padding-right: 36px
+    width: 100%
+  .form-text
+    background-color: $white
+    border-color: #d3d3d3
+    height: 36px
+    padding-left: 0.6em
 
-  .page-gsearch #content &
-    width: 40%
-    height: 33px
-    .form-text
-      padding-left: 0.6em
-      border-color: #d6d6d6
-      margin-bottom: 20px
-
-
-.page-gsearch
-  .search-form
-    .form-item       
-      margin-right: -36px
-      padding-right: 36px
-      .form-text
-        background-color: $white
-        height: 36px
-    .form-submit
-      text-indent: 1000px
-      -webkit-border-radius: 0
-      -moz-border-radius: 0
-      -ms-border-radius: 0
-      border-radius: 0
-      border-top-right-radius: 50%
-      border-bottom-right-radius: 50%
-      border: none
-      width: 36px
-      height: 36px
-      .svg &
-        +background(image_url("search-white.svg") no-repeat 60% 47%, $red)
+  .form-submit
+    text-indent: 1000px
+    -webkit-border-radius: 0
+    -moz-border-radius: 0
+    -ms-border-radius: 0
+    border-radius: 0
+    border-top-right-radius: 50%
+    border-bottom-right-radius: 50%
+    border: none
+    width: 36px
+    height: 36px
+    .svg &
+      +background(image_url("search-white.svg") no-repeat 60% 47%, $red)
+      background-size: 60px
+      &:hover
+        +background(image_url("search-white.svg") no-repeat 60% 47%, $link-blue)
         background-size: 60px
-        &:hover
-          +background(image_url("search-white.svg") no-repeat 60% 47%, $link-blue)
-          background-size: 60px
-      .no-js &, .no-svg &
-        +background(image_url("search-white.png") no-repeat 11px 11px, $red)
-        &:hover
-          +background(image_url("search-white.png") no-repeat 11px 11px, $link-blue)
+    .no-js &, .no-svg &
+      +background(image_url("search-white.png") no-repeat 11px 11px, $red)
+      &:hover
+        +background(image_url("search-white.png") no-repeat 11px 11px, $link-blue)
 
 ///////////////////
 // Search filters
